# mifid-transaction-report-generator

./: .gitignore  README.md  logs.txt  pyproject.toml
config/: mapping.json
samples/: out.xml  trades.csv
src/mifid_tx_gen/: cli.py  config.py  csv_reader.py  domain.py  generator.py  mapper.py  validator.py  xml_builder.py  xml_builder_iso.py
tests/: test_smoke.py
