[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mifid-tx-gen"
version = "0.1.0"
description = "Config-driven MiFID II transaction XML generator (ESMA TR 1.1.0)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Djamel" }]
dependencies = [
    "xmlschema>=2.5.1"
]

[project.optional-dependencies]
envelope = ["lxml>=5.2"]

[project.scripts]
mifid-tx-gen = "mifid_tx_gen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mifid_tx_gen*"]
